--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5TKJS8EW5J"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-5TKJS8EW5J');
+    </script>
     <meta charset="UTF-8">
     <meta name="description" content="Топ фільмів для пергляду:Трилери,комедії,сімейні фільм">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,58 +20,65 @@
 
 <body>
     <div class="container">
-    <header>
-        <h1>Топ фільмів для пергляду</h1>
-        <nav>
-            <ul>
-                <li><a href="#popular">Популярні фільми</a></li>
-                <li><a href="#family">Сімейні фільми</a></li>
-                <li><a href="#thrillers">Трилери</a></li>
-                <li><a href="#comedies">Комедії</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="popular">
-            <h2>Популярні фільмів</h2>
-            <article>
-                <h3>Володар перснів</h3>
-                <img src="https://eneyida.tv/uploads/posts/2020-04/1586359586_1.jpg" alt="Володар перснів">
-                <p>Епічний фентезі-фільм про боротьбу добра і злаю</p>
-                <p>Жанр: фентезі</p>
-            </article>
-        </section>
-        <section id="family">
-            <h2>Сімейні фільми</h2>
-            <article>
-                <h3>Сам удома</h3>
-                <img src="https://eneyida.tv/uploads/posts/2020-04/1586359586_1.jpg" alt="Сам удома">
-                <p>фільм комедія</p>
-                <p>Жанр: Комедії</p>
-            </article>
-        </section>
-        <section id="thrillers">
-            <h2>Трилери</h2>
-            <article>
-                <h3>Хакер</h3>
-                <img src="https://eneyida.tv/uploads/posts/2020-04/1586359586_1.jpg" alt="Хакер">
-                <p>фільм про кіберзахист</p>
-                <p>Жанр: Драми , Кримінал , Трилери</p>
-            </article>
-        </section>
-        <section id="comedies">
-            <h2>Комедії</h2>
-            <article>
-                <h3>Ніч у музеї</h3>
-                <img src="https://eneyida.tv/uploads/posts/2020-04/1586359586_1.jpg" alt="Ніч у музеї">
-                <p>Пригоди у музеї</p>
-                <p>Жанр: Комедії</p>
-            </article>
-        </section>
-    </main>
-    <footer>
-        <p>2025 Топ фільмів для перегляду</p>
-    </footer>
+        <header>
+            <h1>Топ фільмів для пергляду</h1>
+            <nav>
+                <ul>
+                    <li><a href="#popular">Популярні фільми</a></li>
+                    <li><a href="#family">Сімейні фільми</a></li>
+                    <li><a href="#thrillers">Трилери</a></li>
+                    <li><a href="#comedies">Комедії</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section id="popular">
+                <h2>Популярні фільмів</h2>
+                <article>
+                    <h3>Володар перснів</h3>
+                    <img src="https://eneyida.tv/uploads/posts/2020-04/1586359586_1.jpg" alt="Володар перснів">
+                    <p>Епічний фентезі-фільм про боротьбу добра і злаю</p>
+                    <p>Жанр: фентезі</p>
+                    <iframe class="iframe" src="https://www.youtube.com/embed/uHt4lWmqMD8"
+                        title="Володар перснів: Хранителі персня | Український трейлер | 2001" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis fugit adipisci sit pariatur
+                        maiores? Ducimus quod in, quidem aliquam tempora culpa, vitae nulla natus quisquam illum
+                        repudiandae animi quia adipisci.</p>
+                </article>
+            </section>
+            <section id="family">
+                <h2>Сімейні фільми</h2>
+                <article>
+                    <h3>Сам удома</h3>
+                    <img src="https://eneyida.tv/uploads/posts/2020-04/1586359586_1.jpg" alt="Сам удома">
+                    <p>фільм комедія</p>
+                    <p>Жанр: Комедії</p>
+                </article>
+            </section>
+            <section id="thrillers">
+                <h2>Трилери</h2>
+                <article>
+                    <h3>Хакер</h3>
+                    <img src="https://eneyida.tv/uploads/posts/2020-04/1586359586_1.jpg" alt="Хакер">
+                    <p>фільм про кіберзахист</p>
+                    <p>Жанр: Драми , Кримінал , Трилери</p>
+                </article>
+            </section>
+            <section id="comedies">
+                <h2>Комедії</h2>
+                <article>
+                    <h3>Ніч у музеї</h3>
+                    <img src="https://eneyida.tv/uploads/posts/2020-04/1586359586_1.jpg" alt="Ніч у музеї">
+                    <p>Пригоди у музеї</p>
+                    <p>Жанр: Комедії</p>
+                </article>
+            </section>
+        </main>
+        <footer>
+            <p>2025 Топ фільмів для перегляду</p>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
